--- a/index.html
+++ b/index.html
@@ -8,24 +8,56 @@
     <meta property="og:image" content="">
     <meta property="og:title" content="Youtuber Activity Tracker">
     <meta name="description" content="A webpage to let you know how long has past since a Youtuber's last video.">
+    <link rel="stylesheet" type="text/css" href="css/backgroundimg.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
+    <!-- Adds boxicon API -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>Youtuber Activity Tracker</title>
 </head>
 <body>
+    <!-- Background image -->
     <img id="hackerimg" src="image/hacker.jpg" alt="">
-    <div class="coloroverlay"></div>
-    <div class="maindisplay container">
-        <h1 class="maintext">Time since this Youtuber posted a video</h1>
-        <h2 class="maintext">B</h2>
-        <p class="maintext">C</p>
+    <!-- Adds color to the image -->
+    <div class="colorOverlay"></div>
+    <!-- Main Area -->
+    <div class="mainDisplay container">
+        <h1 class="mainText">Time since this Youtuber posted a video</h1>
+        <h2 class="secondText">Time since this Youtuber posted a video</h2>
+
+        <!-- Timer Box -->
+        <div class="timerBox">
+            <div class="timerBox-group">
+                <div class="timerBox-number">12
+                    <p class="timerBox-text">Days</p>
+                </div>
+            </div>
+            <p class="timerBox-colon">:</p>
+            <div class="timerBox-group">
+                <div class="timerBox-number">03
+                    <p class="timerBox-text">Hours</p>
+                </div>
+            </div>
+            <p class="timerBox-colon" id="middle-colon">:</p>
+            <div id="force-line-break"><br></div>
+            <div class="timerBox-group">
+                <div class="timerBox-number">45
+                    <p class="timerBox-text">Minutes</p>
+                </div>
+            </div>
+            <p class="timerBox-colon">:</p>
+            <div class="timerBox-group">
+                <div class="timerBox-number">28
+                    <p class="timerBox-text">Seconds</p>
+                </div>
+            </div>
+        </div>
+        <!-- Youtube, Twitter, Facebook icons -->
         <div class="icondisplay">
-            <h2 class="maintext">A</h2>
-            <h2 class="maintext">A</h2>
-            <h2 class="maintext">A</h2>
-            <h2 class="maintext">A</h2>
+            <i class='bx bxl-youtube' id="youtube"></i>
+            <i class='bx bxl-facebook-circle' id="facebook"></i>
+            <i class='bx bxl-twitter' id="twitter"></i>
         </div>
     </div>
-    
-    
 </body>
 </html>
