Remove unnecessary codes

--- a/index.html
+++ b/index.html
@@ -22,34 +22,25 @@
     <div class="colorOverlay"></div>
     <!-- Main Area -->
     <div class="mainDisplay container">
-        <h1 class="mainText">Time since this Youtuber posted a video</h1>
+        <h1 class="firstText">Time since this Youtuber posted a video</h1>
         <h2 class="secondText">Time since this Youtuber posted a video</h2>
 
         <!-- Timer Box -->
         <div class="timerBox">
-            <div class="timerBox-group">
-                <div class="timerBox-number">12
-                    <p class="timerBox-text">Days</p>
-                </div>
+            <div class="timerBox-number">12
+                <p class="timerBox-text">Days</p>
             </div>
             <p class="timerBox-colon">:</p>
-            <div class="timerBox-group">
-                <div class="timerBox-number">03
-                    <p class="timerBox-text">Hours</p>
-                </div>
+            <div class="timerBox-number">03
+                <p class="timerBox-text">Hours</p>
             </div>
             <p class="timerBox-colon" id="middle-colon">:</p>
-            <div id="force-line-break"><br></div>
-            <div class="timerBox-group">
-                <div class="timerBox-number">45
-                    <p class="timerBox-text">Minutes</p>
-                </div>
+            <div class="timerBox-number">45
+                <p class="timerBox-text">Minutes</p>
             </div>
             <p class="timerBox-colon">:</p>
-            <div class="timerBox-group">
-                <div class="timerBox-number">28
-                    <p class="timerBox-text">Seconds</p>
-                </div>
+            <div class="timerBox-number">28
+                <p class="timerBox-text">Seconds</p>
             </div>
         </div>
         <!-- Youtube, Twitter, Facebook icons -->
