Finish page layout setup

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="colorOverlay"></div>
     <!-- Main Area -->
     <div class="mainDisplay container">
-        <h1 class="firstText">Time since this Youtuber posted a video</h1>
-        <h2 class="secondText">Time since this Youtuber posted a video</h2>
+        <h1 class="firstText">Did this Youtuber post a video today?</h1>
+        <h3 class="secondText">Time since this Youtuber posted a video</h3>
 
         <!-- Timer Box -->
         <div class="timerBox">
@@ -45,9 +45,9 @@
         </div>
         <!-- Youtube, Twitter, Facebook icons -->
         <div class="icondisplay">
-            <i class='bx bxl-youtube' id="youtube"></i>
-            <i class='bx bxl-facebook-circle' id="facebook"></i>
-            <i class='bx bxl-twitter' id="twitter"></i>
+            <a href="#"><i class='bx bxl-youtube' id="youtube"></i></a>
+            <a href="#"><i class='bx bxl-facebook-circle' id="facebook"></i></a>
+            <a href="#"><i class='bx bxl-twitter' id="twitter"></i></a>
         </div>
     </div>
 </body>
