--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- API Key -->
+    <!-- AIzaSyAASD2cdA6_BLWREvJYxxVIY4u1nD9JJKg -->
+    <!-- Client ID -->
+    <!-- 868090579407-h8pcc8h2sqqlpurfft31e6ae7k6g5p0g.apps.googleusercontent.com -->
+    <!-- Client Secret -->
+    <!-- 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 -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta property="og:image" content="">
     <meta property="og:title" content="Youtuber Activity Tracker">
     <meta name="description" content="A webpage to let you know how long has past since a Youtuber's last video.">
@@ -23,7 +28,7 @@
     <!-- Main Area -->
     <div class="mainDisplay container">
         <h1 class="firstText">Did this Youtuber post a video today?</h1>
-        <h3 class="secondText">Time since this Youtuber posted a video</h3>
+        <h3 class="secondText">Time since this Youtuber's last video</h3>
 
         <!-- Timer Box -->
         <div class="timerBox">
