Fetch video content details using Youtube Data API v3

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="mainDisplay container">
         <h1 class="firstText">Did this Youtuber post a video today?</h1>
         <h3 class="secondText">Time since this Youtuber's last video</h3>
-
+        <h3 id="contentDetails"></h3>
+        <h3 id="subCount"></h3>
         <!-- Timer Box -->
         <div class="timerBox">
             <div class="timerBox-number">12
@@ -48,6 +49,7 @@
                 <p class="timerBox-text">Seconds</p>
             </div>
         </div>
+        <script src="js/youtubeAPI.js"></script>
         <!-- Youtube, Twitter, Facebook icons -->
         <div class="icondisplay">
             <a href="#"><i class='bx bxl-youtube' id="youtube"></i></a>
