--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="mainDisplay container">
         <h1 class="firstText">Did this Youtuber post a video today?</h1>
         <h3 class="secondText">Time since this Youtuber's last video</h3>
-        <h3 id="contentDetails"></h3>
-        <h3 id="subCount"></h3>
+        <h3 id="timeDifferences"></h3>
+        
         <!-- Timer Box -->
         <div class="timerBox">
             <div class="timerBox-number">12
