--- a/index.html
+++ b/index.html
@@ -29,24 +29,22 @@
     <div class="mainDisplay container">
         <h1 class="firstText">Did this Youtuber post a video today?</h1>
         <h3 class="secondText">Time since this Youtuber's last video</h3>
-        <h3 id="timeDifferences"></h3>
-        
         <!-- Timer Box -->
         <div class="timerBox">
-            <div class="timerBox-number">12
-                <p class="timerBox-text">Days</p>
+            <div class="timerBox-text">Days
+                <p class="timerBox-number" id="days">12</p>
             </div>
             <p class="timerBox-colon">:</p>
-            <div class="timerBox-number">03
-                <p class="timerBox-text">Hours</p>
+            <div class="timerBox-text" >Hours
+                <p class="timerBox-number" id="hours">04</p>
             </div>
             <p class="timerBox-colon" id="middle-colon">:</p>
-            <div class="timerBox-number">45
-                <p class="timerBox-text">Minutes</p>
+            <div class="timerBox-text" >Minutes
+                <p class="timerBox-number" id="minutes">05</p>
             </div>
             <p class="timerBox-colon">:</p>
-            <div class="timerBox-number">28
-                <p class="timerBox-text">Seconds</p>
+            <div class="timerBox-text" >Seconds
+                <p class="timerBox-number" id="seconds">45</p>
             </div>
         </div>
         <script src="js/youtubeAPI.js"></script>
