be able to calculate the time since preivous video

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Main Area -->
     <div class="mainDisplay container">
         <h1 class="firstText">Did this Youtuber post a video today?</h1>
-        <h3 class="secondText">Time since this Youtuber's last video</h3>
+        <h3 class="secondText" id="secondText">Time since this Youtuber's last video</h3>
         <!-- Timer Box -->
         <div class="timerBox">
             <div class="timerBox-text">Days
